[project]
name = "llm-serving-bench"
version = "0.1.0"
description = "Benchmarking vLLM and SGLang inference serving for Llama-3 8B / Mistral-7B on Modal GPU containers: tokens/sec, p50/p99 latency, and cost-per-million-tokens under varying QPS."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.41.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]              # so `from src.timed_request import ...` resolves from repo root
testpaths = ["tests"]
addopts = "-m 'not smoke'"      # skip live-endpoint tests by default; run them with `-m smoke`
markers = ["smoke: hits the live Modal endpoint (network; may trigger a cold start)"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
